--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,21 @@ services:
   jupyter:
     image: jupyter/datascience-notebook
     volumes:
-      - ./:/work
+      - ./userdata/work:/home/jovyan/work
+      - ./userdata/data:/home/jovyan/data
     command: start.sh jupyter notebook --NotebookApp.base_url='/notebook/' --NotebookApp.token=''
     restart: always
 
   dashboard:
-    build: ./dashboard
+    image: jojomi/hugo
     volumes:
       - ./dashboard/src:/src
       - ./dashboard/output:/output
     environment:
       - HUGO_WATCH=false
-      - HUGO_BASEURL=
     restart: always
 
-  server_dashboard:
+  server:
     image: jojomi/nginx-static
     volumes:
       - ./dashboard/output:/var/www
@@ -30,15 +30,15 @@ services:
     image: nginx
     links: 
       - jupyter
-      - server_dashboard
+      - server
     volumes:
       - ./server/nginx.conf:/etc/nginx/nginx.conf
-      - ./server/carocloud.crt:/data/cert.crt
-      - ./server/carocloud.key:/data/key.key
+      - ./server/letsencrypt.crt:/data/cert.crt
+      - ./server/letsencrypt.key:/data/key.key
     ports:
       - "80:80"
       - "443:443"
     restart: always
     depends_on:
       - "jupyter"
-      - "server_dashboard"
+      - "server"
