--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -21,8 +21,8 @@ http {
       server jupyter:8888 fail_timeout=0;
   }
 
-  upstream server_dashboard {
-      server server_dashboard:80 fail_timeout=0;
+  upstream server {
+      server server:80 fail_timeout=0;
   }
 
     server {
@@ -56,7 +56,7 @@ http {
         error_log /var/log/nginx/error.log;
 
         location / {
-            proxy_pass http://server_dashboard;
+            proxy_pass http://server;
 
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header Host $host;
